k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-playground-ingress
  namespace: devops-playground

spec:
  ingressClassName: nginx

  rules:
    - host: devops-playground.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend

                port:
                  number: 80
